Added shell.c, parser.c

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all contributors to the repository.
 
-Kelvin Yego <>
+Kelvin Yego <yegokelvin00@gmail.com>
 Muriuki Muchiri <muriuki@muchiri.com>
